# jaggedarray_full_solutions

./: readme
databricks_app/: .env.template  .gitignore  app.py  app.yml  databricks.yml  ddl.sql  query_page.py  requirements.txt  test_data.csv  upload_page.py
docker/charges_api/: .env  Dockerfile  app.py  requirements.txt
docker/charges_api/blueprints/: charges.py  person.py
flask_api/charges_api/: .env  app.py  requirements.txt
flask_api/charges_api/blueprints/: charges.py  person.py
google_login/: .env.template  app.py  requirements.txt
pull_data_async/: .gitignore  pull_data_async.py  requirements.txt
rust_diesel/: .env  Cargo.toml
rust_diesel/sql/: person.sql
rust_diesel/src/: main.rs  models.rs  utils.rs
slack_dbx_genie_integration/: .env.template  config.py  databricks_genie_client.py  pyproject.toml  run_bot.py  slack_databricks_genie_bot_client.py
