[project]
name = "slack-databricks-genie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cachetools>=7.1.4",
    "databricks-sdk>=0.110.0",
    "polars>=1.41.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "slack-bolt>=1.28.0",
]
